<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/result_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:logo="@drawable/logo"
        app:title=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingBottom="200dp">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/tomat" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paragraph"
                android:textSize="14sp"
                android:layout_marginTop="8dp" />
            <Button
                android:id="@+id/try_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:layout_marginTop="5dp"
                android:text="@string/try_it"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/paragraph"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="125dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
