<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/result_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:logo="@drawable/logo"
        app:title=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/image_card" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnose"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/confidence_score_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confidence_score"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/back_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:layout_marginTop="100dp"
                android:onClick="goBack"
                android:text="@string/back_home"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/confidence_score_text" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
