<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detection.DetectionFragment">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_margin="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_card"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/image_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.132" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/image_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        />

    <Button
        android:id="@+id/diagnoseButton"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/green"
        android:text="@string/diagnose"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/galleryButton" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/diagnoseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:indicatorColor="@color/green"
        app:trackColor="@color/green" />

</androidx.constraintlayout.widget.ConstraintLayout>
